--- a/public/styles/analytics.css
+++ b/public/styles/analytics.css
@@ -91,11 +91,14 @@
 }
 
 .col-md-3 .panel-body{
-  min-height: 475px;
+  min-height: 380px;
 }
 .col-md-3 .media{
   margin-top: 1%;
 }
 .col-md-6, .col-md-8, .col-md-12{
   padding: 0.5% 0.5% 0.5% 0.5%;
+}
+h5{
+  margin-bottom: 5%;
 }
