Integrated APIs from Community for discussions

--- a/public/styles/community/public-content.less
+++ b/public/styles/community/public-content.less
@@ -271,4 +271,21 @@
     	min-height: 100%;
     }
   }
+
+  .groups {
+    padding: 10px 15px 10px 15px;
+    color: black;
+
+    .media {
+      margin-top: 0;
+      margin-bottom: 15px;
+      font-family: Lato;
+    }
+
+    .media-heading h4 { margin: 0 }
+
+    .media-body {
+      padding-top: 5px;
+    }
+  }
 }
