--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -27,6 +27,7 @@
 @import "site/layout.less";
 @import "community/community.less";
 @import "community/community-analytics.less";
+@import "community/discussion-list.less";
 @import "community/public-news.less";
 @import "community/public-content.less";
 @import "eresources/eresources.less";
