Initial fix for publications

--- a/public/styles/eresources/publications.less
+++ b/public/styles/eresources/publications.less
@@ -1,7 +1,8 @@
 
 /* GRID STYLE */
 .publication-col-grid {
-  text-align: center;
+  text-align: left;
+  height: 300px;
 }
 
 .publication-col-grid .cover {
@@ -64,4 +65,12 @@
 
 #publications-filter .view-button {
   padding: 0;
+}
+
+.pub-pager {
+  text-align: center;
+}
+
+.heading-center{
+  text-align: center;
 }
