Initial fix for publications

--- a/templates/views/eresources/publications.jade
+++ b/templates/views/eresources/publications.jade
@@ -69,7 +69,8 @@ block content
                       // else if data.category == 'Commodity'
                       //   -category = 'commodity'
                       //- a(href='/eresources/publications?view=grid&'+category+'=#{'+category+'.key}')
-                      a(href='/eresources/publications?view=grid&'+category+'=#{data.categoryResult}')
+                      //- a(href='/eresources/publications?view=grid&'+category+'=#{data.categoryResult}')
+                      a(href='/eresources/publications?view=grid')
                         span(aria-hidden="true").glyphicon.glyphicon-th
                     li
                       a(href="/eresources/publications?view=list")
