added link to Elearning Logs

--- a/templates/mixins/elearning/navigation.jade
+++ b/templates/mixins/elearning/navigation.jade
@@ -64,6 +64,8 @@ mixin user-sidenav(section)
                 li.list-group-item
                   a(href='/keystone') Keystone Admin
                 li.list-group-item
+                  a(href='/keystone/elearning-logs') Elearning Logs
+                li.list-group-item
                   a(href='/elearning/analytics') Analytics
                 //- ADD Admin Links
           else
@@ -71,6 +73,8 @@ mixin user-sidenav(section)
               .list-group
                 li.list-group-item
                   a(href='/keystone/learning-objects') Keystone Admin
+                li.list-group-item
+                  a(href='/keystone/elearning-logs') Elearning Logs
                 li.list-group-item
                   a(href='/elearning/analytics') Analytics
                 //- ADD Admin Links
