Add social sharing icons in community.jade

--- a/templates/layouts/community.jade
+++ b/templates/layouts/community.jade
@@ -128,6 +128,25 @@ html
 
       //- The content block should contain the body of your template's content
       block content
+      ul.social-sharing.fixed
+        li.community
+          a(target='_blank', href='#' title="Join our community")
+            img( src="/images/community.png" height="40px")
+        li.facebook
+          a(target='_blank', href='https://www.facebook.com/PCAARRD' title="Like us on Facebook")
+            i.fa.fa-facebook
+        li.twitter
+          a(target='_blank', href='https://twitter.com/dostpcaarrd' title="Follow us on Twitter")
+            i.fa.fa-twitter
+        li.youtube
+          a(target='_blank', href='https://www.youtube.com/channel/UCcrb__kJo7NCYYlbjwAGVwA' title="Subscribe on our channel")
+            i.fa.fa-youtube
+        li.google
+          a(target='_blank', href='https://plus.google.com/+DOSTPCAARRD' title="Add us to your circle")
+            i.fa.fa-google-plus
+        li.newsletter
+          a(href='mailto:pcaarrd@pcaarrd.dost.gov.ph' title="Email Us")
+            i.fa.fa-envelope
 
 
     footer.page-footer
