--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -204,7 +204,7 @@ a:hover, a:focus, a:active {
   /*margin-top: 85px;*/
   /*130 to accomodate main header (logo + links) and blue community header*/
   padding-top: 70px;
-  background-color:#e7e7e7;
+  background-color:#F9F9F9;
 }
 
 #elearning-nav {
